[tool.poetry]
name = "partial_label_masking"
version = "0.1.0"
description = ""
authors = ["Mamoru Miura <mamo3gr@gmail.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
black = {version = "^21.6b0", allow-prereleases = true}
isort = {extras = ["pyproject"], version = "^5.9.1"}
flake8 = "^3.9.2"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
