[tool.poetry]
name = "partial_label_masking"
version = "0.1.0"
description = ""
authors = ["Mamoru Miura <mamo3gr@gmail.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.9"
tensorflow = "2.6.*"
keras = "*"
pandas = "*"
scikit-learn = "*"
Pillow = "*"
PyYAML = "*"

[tool.poetry.dev-dependencies]
mypy = "*"
black = "21.7b0"
isort = {extras = ["pyproject"], version = "^5.10.1"}
flake8 = "^4.0.1"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-mock = "^3.6.1"

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
